Fix default template directory

--- a/templates/hpp.template
+++ b/templates/hpp.template
@@ -13,7 +13,7 @@ class {{CLASS}}
 {
     public:
         {{CLASS}} ({{CURSOR}});
-        ~{{CLASS}} ();
+        virtual ~{{CLASS}} ();
     private:
         /* private data */
 };
