--- a/templates/sh.template
+++ b/templates/sh.template
@@ -1,7 +1,7 @@
 #!/usr/bin/env sh
 
 ######################################################################
-# @author      : {{NAME}}
+# @author      : {{NAME}} ({{EMAIL}})
 # @file        : {{FILE}}
 # @created     : {{TIMESTAMP}}
 #
