add some comments on top of file

--- a/templates/jsx.template
+++ b/templates/jsx.template
@@ -1,3 +1,10 @@
+/**
+ * @component   : {{FILE}}
+ * @author      : {{NAME}} ({{EMAIL}})
+ * @created     : {{TIMESTAMP}}
+ * @description : {{FILE}}
+ */
+
 import React, {Component}  from 'react'
 import PropTypes from 'prop-types'
 
@@ -9,7 +16,11 @@ export default class {{FILE}} extends Component {
   }
 
   render() {
+    return (
+    <div>
     {{CURSOR}}
+    </div>
+    )
   }
 }
 
