Exchange include guard with #pragma once
The include guard is deprecated. #pragma once is encouraged.

--- a/templates/hpp.template
+++ b/templates/hpp.template
@@ -4,10 +4,7 @@
  * @created     : {{TIMESTAMP}}
  */
 
-#ifndef {{MACRO_GUARD}}
-
-#define {{MACRO_GUARD}}
-
+#pragma once
 
 class {{CLASS}}
 {
@@ -18,4 +15,3 @@ class {{CLASS}}
         /* private data */
 };
 
-#endif /* end of include guard {{MACRO_GUARD}} */
